--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-body {
-	font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-	font-size: 100%;
-	width: 400px;
-}
-
 /*Comment box*/
 #comment-box-container {
 	width:100%;
@@ -32,4 +26,26 @@ body {
 #comments-list {
 /* avoid an excessively wide status text */
 	word-wrap: break-word;
+}
+
+
+.habla-master-container {
+  	display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 999999; /* Sit on top */
+    right: 0;
+    top: 0;
+    width: 25%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.habla-comment {
+	background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
