--- a/css/styles.css
+++ b/css/styles.css
@@ -28,24 +28,95 @@
 	word-wrap: break-word;
 }
 
-/*Master Container*/
-#habla {
-  	display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 999999; /* Sit on top */
-    right: 0;
-    top: 0;
-    width: 25%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+:root {
+    --habla-color: rgb(112, 48, 160)
 }
 
-.habla-comment {
-	background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+/*Master Container*/
+#habla {
+    background-color: rgb(256,256,256); /* Fallback color */
+    border-left: solid var(--habla-color);
+    display: block; /* Hidden by default */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    position: fixed; /* Stay in place */
+    right: 0;
+    top: 0;
+    width: 300px; /* Full width */
+    z-index: 999999; /* Sit on top */
+}
+
+/*Habla logo on landing page*/
+.logo {
+    display: block;
+    margin: 20px auto;
+    width: 300px;
+}
+
+/*Buttons on landing page*/
+.landingButton {
+    font-size: 24px;
+    padding: 15px 30px;
+    width: 240px;
+}
+
+/*Other buttons*/
+.generalButton {
+    font-size: 20px;
+    padding: 10px 30px;
+    width: auto;
+}
+
+/*Button base*/
+.landingButton, .generalButton {
+    display: block;
+    border-color: var(--habla-color);
+    border-radius: 8px;
+    border-style: solid;
+    box-shadow: none;
+    background-color: var(--habla-color);
+    color: rgb(256,256,256);
+    height: auto;
+    margin: 30px auto;
+}
+
+/*Input labels*/
+.inputLabel {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    float: left;
+    margin: 5px 0px;
+}
+
+/*Input boxes*/
+.inputBox {
+    border-color: var(--habla-color);
+    border-style: solid;
+    border-width: 1px;
+    float: left;
+    font-size: 18px;
+    height: 10px;
+    padding: 10px;
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+#join-group-form, #create-group-form {
+    margin: 20px auto;
+    text-align: center;
+    width: 200px;
+}
+
+.hablaH1 {
+    display: block;
+    font-size: 30px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/*Everything*/
+body, label, h1 {
+    font-family: Verdana !important;
+    color: var(--habla-color) !important;
 }
