--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,8 @@
     border-width: 1px;
     float: left;
     font-family: Verdana;
-    font-size: 18px;
-    height: 10px;
+    font-size: 16px;
+    height: auto;
     padding: 10px;
     width: 200px;
     margin-bottom: 20px;
