--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,11 @@
     padding: 5px 20px;
 }
 
+.hablaPostButton:hover {
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color)
+}
+
 :root {
     --habla-color: rgb(112, 48, 160);
     --secondary-color: rgb(170, 114, 212);
@@ -194,19 +199,79 @@
     padding: 0px;
 }
 
-.hablaCommentsHeader {
+.hablaHeader {
     background-color: var(--habla-color);
-    color: white;
+    display: flex;
     font-family: verdana;
-    font-size: 20px;
-    font-weight: bold;
-    display: table-cell;
     height: auto;
+    padding: 15px;
+    overflow: hidden;
+}
+
+.hablaGroupHeader {
+    height: auto;
+    width: 200px;
+}
+
+.hablaDropDownButton {
+    background: transparent;
+    border-radius: 5px;
+    border: solid transparent;
+    display: flex;
+    height: auto;
+    padding: 5px;
+    text-align: left;
+    width: 200px;
+}
+
+.hablaDropDownButton:hover {
+    border-color: var(--secondary-color);
+}
+
+.hablaGroupName {
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
     margin: 0px;
-    padding: 30px 10px;
-    text-align: center;
-    vertical-align: middle;
-    width: 300px;
+    margin-right: 5px;
+    max-width: 180px;
+    word-wrap: break-word;
+}
+
+
+.hablaDropDownIcon {
+    height: 8px;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 10px;
+}
+
+.hablaGroupPassword {
+    color: white;
+    font-size: 12px;
+    margin: 0px 0px 0px 5px;
+    word-wrap: break-word;
+}
+
+.hablaLinkHeader {
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.hablaLinkButton {
+    background: transparent;
+    border: solid transparent;
+    border-radius: 5px;
+}
+
+.hablaLinkButton:hover {
+    border-color: var(--secondary-color);
+}
+
+.hablaLinkIcon {
+    height: 30px;
+    width: 30px;
 }
 
 .hablaReplySection {
